--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,7 @@ h3{
 	color:#E7E8EA;
 
 }
-<<<<<<< HEAD
 #categories, #items{
-=======
-ul{
->>>>>>> 93c1bbc0e7fed9320e644176c0ada7a95c2a4ec8
 	background-color: rgba(178,194,129,0.2);
 	list-style-type: none;
 	width:35%;
@@ -72,12 +68,11 @@ li{
 	padding-left: 5px;
 	padding-right: 5px;
 }
-<<<<<<< HEAD
 #nav{
 	list-style-type: none;
 	font-size:1.4em;
 	width:35%;
-	margin:20px auto;
+	margin:0 auto;
 }
 #nav li{
 	display:inline;
@@ -87,7 +82,4 @@ li{
 	cursor:pointer;
 	color:#E7E8EA;
 }
-=======
-
->>>>>>> 93c1bbc0e7fed9320e644176c0ada7a95c2a4ec8
 /*162 108 39*/
