--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	background-image: url("../img/rest.jpg");
 	background-color: #000;
 	background-size:100%;
-	background-repeat: no-repeat;
+	/*background-repeat: no-repeat;*/
 }
 
 #container{
